--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==2.0.7
 django-toolbelt==0.0.1
 gunicorn==19.9.0
 psycopg2==2.7.5
+psycopg2-binary==2.7.5
 pytz==2018.5
 static3==0.7.0
 whitenoise==3.3.1
