--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 aioredis==1.1.0
 asgiref==2.3.2
 async-timeout==3.0.0
+atomicwrites==1.1.5
 attrs==18.1.0
 autobahn==18.6.1
 Automat==0.7.0
-channels==2.1.2
+channels==2.1.3
 channels-redis==2.2.1
 constantly==15.1.0
 daphne==2.2.0
@@ -17,9 +18,15 @@ hiredis==0.2.0
 hyperlink==18.0.0
 idna==2.7
 incremental==17.5.0
+more-itertools==4.3.0
 msgpack==0.5.6
+pluggy==0.7.1
 psycopg2==2.7.5
+py==1.5.4
 PyHamcrest==1.9.0
+pytest==3.7.1
+pytest-asyncio==0.9.0
+pytest-django==3.3.3
 pytz==2018.5
 selenium==3.13.0
 six==1.11.0
