--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ daphne==2.2.0
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.0.7
+django-heroku==0.3.1
 django-toolbelt==0.0.1
 gunicorn==19.9.0
 hiredis==0.2.0
